--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2021,7 +2021,7 @@ body {
 
 .submit-btn {
   width: 100%;
-  background-color: #ce2934;
+  background-color: #011E60;
   border: none;
   font-weight: 600;
   font-size: 18px;
@@ -2035,7 +2035,7 @@ body {
 }
 
 .submit-btn:hover {
-  background-color: #b71c2b;
+  background-color: #011E60;
   transform: translateY(-2px);
   box-shadow: 0 5px 15px rgba(206, 41, 52, 0.3);
 }
