--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2186,3 +2186,73 @@ body {
   height: auto;
   object-fit: contain; /* أو cover حسب المطلوب */
 }
+/* قسم المميزات */
+#features {
+  padding: 40px 0;
+}
+
+.feature-item {
+  text-align: center;
+}
+
+.feature-icon {
+  font-size: 40px;
+  color: #011E60;
+}
+
+.feature-title {
+  margin-top: 10px;
+  font-weight: 700;
+  color: #543A14;
+}
+
+.feature-desc {
+  font-size: 14px;
+  color: #555;
+}
+/* العناوين */
+.about-title {
+  direction: rtl;
+  text-align: right;
+  font-family: 'Cairo', sans-serif;
+  font-size: 26px;
+  font-weight: 700;
+  color: #543A14;
+}
+
+.about-heading {
+  font-size: 26px;
+  font-weight: 700;
+  font-family: 'Cairo', sans-serif;
+  text-align: center;
+  margin: 15px 0;
+  color: #222;
+  line-height: 1.8;
+}
+
+/* الليستة */
+.about-list {
+  direction: rtl;
+  text-align: right;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  font-family: 'Cairo', sans-serif;
+  font-size: 20px;
+  line-height: 1.9;
+  color: #333;
+}
+
+.about-list li {
+  position: relative;
+  padding-right: 25px;
+  margin-bottom: 12px;
+}
+
+.about-list li::before {
+  content: "•";
+  color: #011E60;
+  font-size: 22px;
+  position: absolute;
+  right: 0;
+}
